
   b. Turn off use of Courant Snider parameters when user specifies a beam sigma.

</v3r0p8>

<v3r0p9>

 November 6 2013

   In case we need to study the shape of the numu spectrum if Horn1 is tilted or displaced, one needs a bit more information. So I added some "virtual SWICS" at the exit of Horn1, entrance/exit of Horn2, saving the phase space for all particles with a momentum greater than 1 GeV and less than 50 GeV. (thereby neglecting the non-interaction primary protons.). Since Milorad Popovic wanted to get an idea of the momenta of the emerging pions from Horn1, and both of us prefer doing studies with ASCII files, intead of ROOT, this is just an extension of the "study files" generated by the LBNESteppingAction class. The new commands is:

/LBNE/stepping/generateParticlesFluxThroughHorns TRUE
  
which must be inserted before the previously defined command 

/LBNE/stepping/filename  <fileName> 

November 12 2013 

 Fixed a serious mistake in defining the G4 volumes for the Horn2 Outer Conductor: the medium was "Air", it must "aluminum".  Once validated by studying the pion vertices yielding neutrinos (thanks to Seongtae Park!, and further comments by Jim H.), a new tag is probably required,as this should make some differences in the neutrino yield. Mea Culpa!  Paul Lebrun.
 
 Note that the seemingly missing 3mm long of the inner conductor will require a bit more studies, difficult to do without access to the blue print.
 The misplaced shielding blocks (or water tubes/vessels) will require some discussion, face to face with Jim or Alberto. 
 
 P.L., Malargue, Argentina, Nov. 12 2013 
 
 </v3r0p9>
 


 



 



